Kids With the Greatest Number of Candies